# neutube

./: .clang-format  .clang-tidy  .gitignore  LICENSE.txt  build.sh  neutube_build.py  readme.md  vcpkg.json
neurolabi/c/: Makefile-def.in  combine_image_channels.c  neurolabi_c.pro  tz_geo3d_ball.c  tz_geo3d_ball.h  tz_image_array.c  tz_image_io.c  tz_local_neuroseg.c  tz_locseg_chain.c  tz_object_3d.h  tz_stack.c  tz_stack.h  tz_stack_bwmorph.c  tz_stack_bwmorph.h  tz_stack_code.h  tz_stack_io.c  tz_stack_io.h  tz_string_defs.h  tz_string_workspace.c  tz_trace_chain_com.c.t  tz_trace_chain_com.h.t
neurolabi/c/include/: tz_imatrix.h
neurolabi/gui/: DiagnosisHub.h  deploy_neutube.sh  deploy_win.bat  extlib.pri  flyemdataform.cpp  gui.pro  gui_free.pri  main.cpp  mainwindow.cpp  mainwindow.h  neutubeconfig.cpp  neutubeconfig.h  newprojectmainwindow.cpp  post_build  z3d_attrib_locations.h  z3dapplication.cpp  z3dapplication.h  z3dbackgroundrenderer.cpp  z3dbackgroundrenderer.h  z3dcamera.cpp  z3dcamera.h  z3dcameraparameter.cpp  z3dcameraparameter.h  z3dcanvas.cpp  z3dcanvas.h  z3dcanvasrenderer.cpp  z3dcompositor.cpp  z3dcompositor.h  z3dconerenderer.cpp  z3dfontrenderer.cpp  z3dgl.cpp  z3dgl.h  z3dgpuinfo.cpp  z3dgpuinfo.h  z3dimage2drenderer.cpp  z3dlinerenderer.cpp  z3dnetworkevaluator.cpp  z3dnetworkevaluator.h  z3dport.cpp  z3dport.h  (+98 more)
neurolabi/gui/dialogs/: autosaveswclistdialog.cpp  autosaveswclistdialog.h  diagnosisdialog.cpp  diagnosisdialog.h  shapepaperdialog.cpp  zeditswcdialog.cpp  zsubtractswcsdialog.cpp  zsubtractswcsdialog.h
neurolabi/gui/dvid/: zdvidannotation.cpp  zdvidannotation.h  zdvidreader.cpp  zdvidwriter.cpp  zflyembookmarkcommand.cpp  zflyembookmarkcommand.h
neurolabi/gui/flyem/: zflyembodymergeproject.cpp  zflyembodymergeproject.h  zflyemdataframe.cpp  zflyemproofmvc.cpp  zflyemproofmvc.h
neurolabi/gui/misc/: zstackyzview.cpp  zstackyzview.h
neurolabi/gui/mylib/: array.cpp  utilities.cpp
neurolabi/gui/test/: test.pri  z3dinteracttest.h  zblockgridtest.h  zclosedcurvetest.h  zcuboidtest.h  zflyemneuronfiltertest.h  zflyemneuronmatchtest.h  zflyemneuronrangetest.h  zflyemqualitycontroltest.h  zflyemsynaseannotationtest.h  zgraphtest.h  zobject3dscantest.h  zsparsestacktest.h  zstackdoctest.h  zstackgraphtest.h  zstackobjectgrouptest.h  zstringtest.h  zswcanalyzertest.h  zswcmetrictest.h  (+3 more)
neurolabi/lib/: build.sh
src/: LICENSE
src/c/: CMakeLists.txt  Doxyfile  GenerateGraspTxtFiles.sh  addc  alignconf.c  alignresult.c  alignstack.c  alignstack_batch.c  arinfo.c  assign_puncta.c  batch_trace  batchtest.sh  bwdist.c  bwinv.c  bwmorph.c  bwsolid.c  c_lib.files  c_lib.includes  chainfeat.c  combine_image_channels.c  configure  configure.ac  configure.makefile  cropstack.c  ct017.c  deploy_trace_package.sh  detect_soma.c  detect_soma2.c  detection_score.c  diadem.c  diadem_b1.c  diadem_c1_data.c  diadem_d1.c  diadem_d1_data.c  diadem_d1_merge.c  diadem_d1_recon.c  diadem_d1_split.c  diadem_d1_stitch.c  diadem_d1_watershed.c  diadem_e1_data.c  (+484 more)
src/c/cmake_modules/: CheckCInlineKeyword.cmake  FindFFTW3.cmake  FindFFTW3F.cmake  FindJANSSON.cmake  FindLibXml2_MY.cmake  FindPCRE.cmake  FindPNG_MY.cmake  FindZLIB_MY.cmake  test_inline.c
src/c/include/: neurolabi_config-h.in  neurolabi_config.h  neurolabi_config_cmake.in  tz_cdefs.h  tz_exception.h  tz_imatrix.h  tz_sys.h  tz_voxel_linked_list.h
src/c/private/: alignconf.c  alignstack.c  diadem_d1_recon.h  edswc.c  testneurochain.h  testspgrow.h  testswc.h  tz_graph_utils.c  tz_image_code.c  tz_image_lib.c  tz_locseg_chain_p.h  tz_main.c  tz_neuroseg.c  tz_neurotrace.c  tz_stack_bwdist.c  tz_stack_bwdist_mu16.c  tz_stack_bwdist_u16.c  tz_stack_bwmorph.c  tz_stack_lib.c  tz_stack_objlabel.c  tz_voxel_graphics.c  tzp_geo3d_ball.c  tzp_local_neuroseg.c  tzp_locseg_chain.c  tzp_random.c  tzp_swc_tree.c
src/cpp/: CMakeLists.txt  build_neurolabi
src/doc/: flyem_shortcut.html
src/gui/: PlotSettings.cpp  add_itk.pri  biocytin_config.xml  c_json.cpp  c_json.h  c_stack.cpp  c_stack.h  config.xml  config_flyem.xml  config_flyem_3dfix.xml  deploy_linux  deploy_mac  deploy_neutube.sh  doxyfile  extlib.pri  extratarget.pri  flyemdataform.cpp  flyemdataform.h  flyemdataform.ui  gui.pro  gui.qrc  gui_free.pri  itkimagedefs.h  jneurontracer.cpp  jneurontracer.h  json.pri  mainwindow.cpp  mainwindow.h  mkbundle  mkrelease  neutube.cpp  neutube.h  neutube_def.h  neutubeconfig.cpp  neutubeconfig.h  newprojectmainwindow.cpp  newprojectmainwindow.h  newprojectmainwindow.ui  openvdb_header.h  plotsettings.h  (+746 more)
src/json/: command_config.json  skeletonize.json  skeletonize.schema.json  skeletonize_fib25_len40.json  skeletonize_mb.json  skeletonize_mb_len40.json  trace.json  trace_config.json  trace_config_biocytin.json
src/lib/: build.sh
src/mex/: README  tz_alignstack.c  tz_blockmean_dm.c  tz_blocksum_dm.c  tz_conv.c  tz_corr.c  tz_fcmp.c  tz_fftc2r.c  tz_fftr2c.c  tz_mexarraytrans.c  tz_mexarraytrans.h  tz_mexutils.h  tz_readtifstack.c  tz_segdetector.c  tz_segdetector2.c  tz_stackbg.c  tz_stacklocmax.c  tz_stackthresh.c  tz_tifbg.c  tz_tifhist.c  tz_tifthresh.c  tz_tifthreshbk.c  tz_writetifstack.c  tz_writetifstack.m
src/python/: CMakeParser.py  QMakeParser.py  TaskManager.py  flyem.py  flyem_process.py  hdf5_explorer.py  neugeo.py  neututils.py  ntmake.py  qcmake.py  quality_analyzer.py  skeletonize.py  stackImageProcess.py  test.py  testjson.py
src/shell/: assert_succ.sh  bigneuron_trace  cluster_fix  cluster_fix_cmake  cluster_fix_config_header  cluster_fix_makefile  compare_trace  copy_result  debug_neutu  diadem  diadem_a1  diadem_b1  diadem_bk  diadem_c1  diadem_c1_file  diadem_c1_merge_test  diadem_d1  diadem_d1_file  diadem_d1_grow_all.sh  diadem_d1_merge  diadem_d1_split  diadem_d1_stitch  diadem_d1_stitch_all.sh  diadem_d1_watershed  diadem_sort  extract_em_neuron  flyem  flyem_backup_node  flyem_binarize  flyem_map  flyem_ntupd  flyem_post_install  flyem_prepare  flyem_prepare_imat  flyem_range  flyem_relink  flyem_result_check  flyem_setup_linux_conda  flyem_skeletonize  flyem_skeletonize_cluster  (+43 more)
(+858 files in other folders)
